# dataagent.tool.tracertrail

./: .dockerignore  .gitignore  AGENTS.md  BACKLOG.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  opencode.json  package-lock.json  pyproject.toml
tracertrail/: README.md  RELEASE.md  check_server.js  debug_db.js  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  test_api.js  vite.config.js
tracertrail-sdk/: .coverage  README.md  pyproject.toml  setup.py
tracertrail-sdk/examples/: basic_usage.py
tracertrail-sdk/tests/: test_client.py  test_http.py  test_integration.py  test_package.py
tracertrail-sdk/tracertrail/: __init__.py  auth.py  client.py  config.py  exceptions.py  http.py
tracertrail-sdk/tracertrail/models/: __init__.py  base.py
tracertrail/examples/: sdk_usage.py
tracertrail/sample/: Customer 360_export.csv
tracertrail/server/: app.js  database.js  tracertrail.db
tracertrail/server/mcp/: index.js  stdio.js
tracertrail/server/middleware/: audit.js  auth.js
tracertrail/server/routes/: audit.js  auth.js  datasets.js  datasources.js  issues.js  processing_runs.js  projects.js  vault.js
tracertrail/server/storage/: tracertrail.db  tracertrail.db-shm  tracertrail.db-wal
tracertrail/server/uploads/: 1767024781790-88825646-c.txt
tracertrail/src/: App.jsx  index.css
tracertrail/src/api/: dataAgentClient.js  (+4 more)
tracertrail/test-results/: .last-run.json
tracertrail/tests/: conftest.py  datasets.spec.js  datasources.spec.js  issues.spec.js  navigation.spec.js  projects.spec.js  settings.spec.js  test_backend_api.py  vault.spec.js
tracetrail-skill/: IMPLEMENTATION.md  SKILL.md
tracetrail-skill/evals/: evals.json
tracetrail-skill/references/: auth.md  data-model.md  endpoints.md  error-codes.md
tracetrail-skill/scripts/: test_connection.sh
(+59 files in other folders)
